--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,7 +1058,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "for x in city_indexes\n",
+    "for x in city_indices\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
