--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
-    "    print({x+1} +'. ' +city_names[x] )\n",
+    "    print(f'{x+1} . ' +city_names[x] )\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
