Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,22 +1053,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-349004eaa1dc>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-349004eaa1dc>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print({x+1} .{city_names[x]} )\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{x+1}.Buenos Aires\n",
+      "{x+1}.Toronto\n",
+      "{x+1}.Marakesh\n",
+      "{x+1}.Albuquerque\n",
+      "{x+1}.Los Cabos\n",
+      "{x+1}.Greenville\n",
+      "{x+1}.Archipelago Sea\n",
+      "{x+1}.Pyeongchang\n",
+      "{x+1}.Walla Walla Valley\n",
+      "{x+1}.Salina Island\n",
+      "{x+1}.Solta\n",
+      "{x+1}.Iguazu Falls\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
-    "    print('{x+1}' +'.' +city_names[x]} )\n",
+    "    print('{x+1}' +'.' +city_names[x] )\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
