--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,18 +1053,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-dcacb820d0d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcity_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0mcity_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y.Buenos Aires\n",
+      "y.Toronto\n",
+      "y.Marakesh\n",
+      "y.Albuquerque\n",
+      "y.Los Cabos\n",
+      "y.Greenville\n",
+      "y.Archipelago Sea\n",
+      "y.Pyeongchang\n",
+      "y.Walla Walla Valley\n",
+      "y.Salina Island\n",
+      "y.Solta\n",
+      "y.Iguazu Falls\n"
      ]
     }
    ],
@@ -1072,7 +1079,7 @@
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
     "    y=x+1\n",
-    "    print( y +'.' +city_names[x] )\n",
+    "    print( 'y' +'.' +city_names[x] )\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
