--- a/index.ipynb
+++ b/index.ipynb
@@ -1078,7 +1078,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
-    "    names_and_ranks\n",
+    "    names_and_ranks= [x+1, '.', city_names[x]]\n",
     "    print( x+1, '.', city_names[x] )\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
