--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,32 +1053,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 'Buenos Aires']\n",
-      "[2, 'Toronto']\n",
-      "[3, 'Marakesh']\n",
-      "[4, 'Albuquerque']\n",
-      "[5, 'Los Cabos']\n",
-      "[6, 'Greenville']\n",
-      "[7, 'Archipelago Sea']\n",
-      "[8, 'Pyeongchang']\n",
-      "[9, 'Walla Walla Valley']\n",
-      "[10, 'Salina Island']\n",
-      "[11, 'Solta']\n",
-      "[12, 'Iguazu Falls']\n"
+      "[1.0, 'Buenos Aires']\n",
+      "[2.0, 'Toronto']\n",
+      "[3.0, 'Marakesh']\n",
+      "[4.0, 'Albuquerque']\n",
+      "[5.0, 'Los Cabos']\n",
+      "[6.0, 'Greenville']\n",
+      "[7.0, 'Archipelago Sea']\n",
+      "[8.0, 'Pyeongchang']\n",
+      "[9.0, 'Walla Walla Valley']\n",
+      "[10.0, 'Salina Island']\n",
+      "[11.0, 'Solta']\n",
+      "[12.0, 'Iguazu Falls']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
-    "    names_and_ranks= [x+1,city_names[x]]\n",
+    "    names_and_ranks= [x+1.,city_names[x]]\n",
     "    print( names_and_ranks)\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
