--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,25 +1053,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.0, 'Buenos Aires']\n",
-      "[2.0, 'Toronto']\n",
-      "[3.0, 'Marakesh']\n",
-      "[4.0, 'Albuquerque']\n",
-      "[5.0, 'Los Cabos']\n",
-      "[6.0, 'Greenville']\n",
-      "[7.0, 'Archipelago Sea']\n",
-      "[8.0, 'Pyeongchang']\n",
-      "[9.0, 'Walla Walla Valley']\n",
-      "[10.0, 'Salina Island']\n",
-      "[11.0, 'Solta']\n",
-      "[12.0, 'Iguazu Falls']\n"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-29-5d2aac217653>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-5d2aac217653>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks= [f'{x+1}. {city_names[x]}]\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
