--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,32 +1053,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 'Buenos Aires']\n",
-      "[2, 'Toronto']\n",
-      "[3, 'Marakesh']\n",
-      "[4, 'Albuquerque']\n",
-      "[5, 'Los Cabos']\n",
-      "[6, 'Greenville']\n",
-      "[7, 'Archipelago Sea']\n",
-      "[8, 'Pyeongchang']\n",
-      "[9, 'Walla Walla Valley']\n",
-      "[10, 'Salina Island']\n",
-      "[11, 'Solta']\n",
-      "[12, 'Iguazu Falls']\n"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-32-19ba26293625>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-19ba26293625>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks= [f'{x+1} ]\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
-    "    names_and_ranks= [f'{x+1},  city_names[x]]\n",
+    "    names_and_ranks= [f'{x+1} city_names[x] ]\n",
     "    print( names_and_ranks)\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
