--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,7 +1068,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
-    "    names_and_ranks= [f'{x+1} city_names[x] ]\n",
+    "    names_and_ranks= [f'{x+1} {city_names[x] ]\n",
     "    print( names_and_ranks)\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
