--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,32 +1053,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1 Buenos Aires']\n",
-      "['2 Toronto']\n",
-      "['3 Marakesh']\n",
-      "['4 Albuquerque']\n",
-      "['5 Los Cabos']\n",
-      "['6 Greenville']\n",
-      "['7 Archipelago Sea']\n",
-      "['8 Pyeongchang']\n",
-      "['9 Walla Walla Valley']\n",
-      "['10 Salina Island']\n",
-      "['11 Solta']\n",
-      "['12 Iguazu Falls']\n"
+      "['1. Buenos Aires']\n",
+      "['2. Toronto']\n",
+      "['3. Marakesh']\n",
+      "['4. Albuquerque']\n",
+      "['5. Los Cabos']\n",
+      "['6. Greenville']\n",
+      "['7. Archipelago Sea']\n",
+      "['8. Pyeongchang']\n",
+      "['9. Walla Walla Valley']\n",
+      "['10. Salina Island']\n",
+      "['11. Solta']\n",
+      "['12. Iguazu Falls']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
-    "    names_and_ranks= [f'{x+1} {city_names[x]}' ]\n",
+    "    names_and_ranks= [f'{x+1}. {city_names[x]}' ]\n",
     "    print( names_and_ranks)\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
@@ -1086,18 +1086,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Iguazu Falls'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-e11842da972d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# '1. Buenos Aires'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# '2. Toronto'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# '12. Iguazu Falls'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
