--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,7 +1121,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for population in "
+    "for population in city"
    ]
   },
   {
