--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,7 +1122,8 @@
    "source": [
     "city_populations = []\n",
     "for population in city_indices:\n",
-    "    print()"
+    "    \n",
+    "    print(city_populations)"
    ]
   },
   {
