--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,7 +1122,7 @@
    "source": [
     "city_populations = []\n",
     "for population in city_indices:\n",
-    "    city_populations =list(cities[popu])\n",
+    "    city_populations =list(cities[population][\"\"])\n",
     "    print(city_populations)"
    ]
   },
