Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1133,7 +1133,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for population in city_indices:\n",
+    "for y in city_indices:\n",
     "    city_populations =list(cities[population][\"Population\"])\n",
     "    print(city_populations)"
    ]
