--- a/index.ipynb
+++ b/index.ipynb
@@ -1134,7 +1134,7 @@
    "source": [
     "city_populations = []\n",
     "for y in city_indices:\n",
-    "    city_populations =list(cities[population][\"Population\"])\n",
+    "    city_populations =list(cities[y][Population\"])\n",
     "    print(city_populations)"
    ]
   },
