--- a/index.ipynb
+++ b/index.ipynb
@@ -1133,8 +1133,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for x in city_indices:\n",
-    "    city_populations =list(cities[x]['Population'])\n",
+    "for y in city_indices:\n",
+    "    city_populations =list(cities[y]['Population'])\n",
     "    print(city_populations)"
    ]
   },
