--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,13 +1053,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['1. Buenos Aires']\n",
+      "['2. Toronto']\n",
+      "['3. Marakesh']\n",
+      "['4. Albuquerque']\n",
+      "['5. Los Cabos']\n",
+      "['6. Greenville']\n",
+      "['7. Archipelago Sea']\n",
+      "['8. Pyeongchang']\n",
+      "['9. Walla Walla Valley']\n",
+      "['10. Salina Island']\n",
+      "['11. Solta']\n",
       "['12. Iguazu Falls']\n"
      ]
     }
@@ -1068,7 +1079,7 @@
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
     "    names_and_ranks= [f'{x+1}. {city_names[x]}' ]\n",
-    "print( names_and_ranks)\n",
+    "    print( names_and_ranks)\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
