Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1134,8 +1134,8 @@
    "source": [
     "city_populations = []\n",
     "for y in city_indices:\n",
-    "    city_populations =list(cities[y]['Population'])\n",
-    "print(city_populations)"
+    "    city_populations =[cities[y]['Population'])\n",
+    "    print(city_populations)"
    ]
   },
   {
