Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,32 +1053,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1. Buenos Aires']\n",
-      "['2. Toronto']\n",
-      "['3. Marakesh']\n",
-      "['4. Albuquerque']\n",
-      "['5. Los Cabos']\n",
-      "['6. Greenville']\n",
-      "['7. Archipelago Sea']\n",
-      "['8. Pyeongchang']\n",
-      "['9. Walla Walla Valley']\n",
-      "['10. Salina Island']\n",
-      "['11. Solta']\n",
-      "['12. Iguazu Falls']\n"
+      "['1', '.', ' ', 'B', 'u', 'e', 'n', 'o', 's', ' ', 'A', 'i', 'r', 'e', 's']\n",
+      "['2', '.', ' ', 'T', 'o', 'r', 'o', 'n', 't', 'o']\n",
+      "['3', '.', ' ', 'M', 'a', 'r', 'a', 'k', 'e', 's', 'h']\n",
+      "['4', '.', ' ', 'A', 'l', 'b', 'u', 'q', 'u', 'e', 'r', 'q', 'u', 'e']\n",
+      "['5', '.', ' ', 'L', 'o', 's', ' ', 'C', 'a', 'b', 'o', 's']\n",
+      "['6', '.', ' ', 'G', 'r', 'e', 'e', 'n', 'v', 'i', 'l', 'l', 'e']\n",
+      "['7', '.', ' ', 'A', 'r', 'c', 'h', 'i', 'p', 'e', 'l', 'a', 'g', 'o', ' ', 'S', 'e', 'a']\n",
+      "['8', '.', ' ', 'P', 'y', 'e', 'o', 'n', 'g', 'c', 'h', 'a', 'n', 'g']\n",
+      "['9', '.', ' ', 'W', 'a', 'l', 'l', 'a', ' ', 'W', 'a', 'l', 'l', 'a', ' ', 'V', 'a', 'l', 'l', 'e', 'y']\n",
+      "['1', '0', '.', ' ', 'S', 'a', 'l', 'i', 'n', 'a', ' ', 'I', 's', 'l', 'a', 'n', 'd']\n",
+      "['1', '1', '.', ' ', 'S', 'o', 'l', 't', 'a']\n",
+      "['1', '2', '.', ' ', 'I', 'g', 'u', 'a', 'z', 'u', ' ', 'F', 'a', 'l', 'l', 's']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] \n",
     "for x in city_indices:\n",
-    "    names_and_ranks= list(f'{x+1}. {city_names[x]}' \n",
+    "    names_and_ranks= list([f'{x+1}. {city_names[x]}' )\n",
     "    print( names_and_ranks)\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
