--- a/index.ipynb
+++ b/index.ipynb
@@ -1075,22 +1075,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1. Buenos Aires'"
+       "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names_and_ranks[0] # '1. Buenos Aires'\n"
+    "names_and_ranks[0] # '1. Buenos Aires'\n",
+    "names_and_ranks[1] # '2. Toronto'\n",
+    "names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
   {
