Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1129,7 +1129,7 @@
    "source": [
     "city_populations = []\n",
     "for y in city_indices:\n",
-    "    city_populations =list([cities[y]['Population']])\n",
+    "    city_populations.append(cities[y]['Population']])\n",
     "    print(city_populations)"
    ]
   },
