--- a/index.ipynb
+++ b/index.ipynb
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1112,24 +1112,24 @@
      "output_type": "stream",
      "text": [
       "[2891]\n",
-      "[2732]\n",
-      "[929]\n",
-      "[559]\n",
-      "[288]\n",
-      "[93]\n",
-      "[60]\n",
-      "[44]\n",
-      "[33]\n",
-      "[3]\n",
-      "[2]\n",
-      "[0]\n"
+      "[2891, 2732]\n",
+      "[2891, 2732, 929]\n",
+      "[2891, 2732, 929, 559]\n",
+      "[2891, 2732, 929, 559, 288]\n",
+      "[2891, 2732, 929, 559, 288, 93]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44, 33]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2, 0]\n"
      ]
     }
    ],
    "source": [
     "city_populations = []\n",
     "for y in city_indices:\n",
-    "    city_populations.append(cities[y]['Population']])\n",
+    "    city_populations.append(cities[y]['Population'])\n",
     "    print(city_populations)"
    ]
   },
