--- a/index.ipynb
+++ b/index.ipynb
@@ -2119,7 +2119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for index in cit"
    ]
   },
   {
