--- a/index.ipynb
+++ b/index.ipynb
@@ -2120,7 +2120,7 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for index in cit"
+    "for index in city_indices "
    ]
   },
   {
