--- a/index.ipynb
+++ b/index.ipynb
@@ -2120,7 +2120,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for index in city_indices "
+    "for index in city_indices:\n",
+    "    city_areas,ap"
    ]
   },
   {
