--- a/index.ipynb
+++ b/index.ipynb
@@ -2121,7 +2121,8 @@
    "source": [
     "city_areas = []\n",
     "for index in city_indices:\n",
-    "    city_areas.append(cities[index]['Area'])"
+    "    city_areas.append(cities[index]['Area'])\n",
+    "    "
    ]
   },
   {
