--- a/index.ipynb
+++ b/index.ipynb
@@ -2122,7 +2122,8 @@
     "city_areas = []\n",
     "for index in city_indices:\n",
     "    city_areas.append(cities[index]['Area'])\n",
-    "    "
+    "\n",
+    "print(city)"
    ]
   },
   {
