--- a/index.ipynb
+++ b/index.ipynb
@@ -2115,15 +2115,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[203, 630, 230, 491, 3751, 68, 2000, 1464, 35, 26, 59, 2396]\n"
+     ]
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "for index in city_indices:\n",
     "    city_areas.append(cities[index]['Area'])\n",
     "\n",
-    "print(city)"
+    "print(city_areas)"
    ]
   },
   {
